# cr_zl_v2

./: .env.example  .gitignore  API文档.md  README.md  demo_agent.py  pyproject.toml  run_v2_cli.py  start_api.bat  start_api.ps1  start_cli.bat  start_cli.ps1  test_api.py
app/: main.py
app/agent_v2/: __init__.py  agent_core.py  agent_format.py  agent_session.py  agent_tools.py  eval_subagent.py
app/api/routes/: agent_v2.py
app/api/static/: agent_v2.html
app/controller/: __init__.py  report_parser.py
app/services/: mineru_service.py
files/: sessions.json
skills/ipc-search/: SKILL.md
skills/ipc-search/references/IPC_Tree/A_人类生活必需/: info.txt
skills/ipc-search/references/IPC_Tree/A_人类生活必需/A01_农业；林业；畜牧业；狩猎；诱捕；捕鱼/: info.txt
skills/ipc-search/references/IPC_Tree/A_人类生活必需/A21_焙烤；制作或处理面团的设备；焙烤用面团/: info.txt
skills/ipc-search/references/IPC_Tree/A_人类生活必需/A22_屠宰；肉品处理；家禽或鱼的加工/: info.txt
skills/ipc-search/references/IPC_Tree/A_人类生活必需/A23_食品、食料或非酒精饮料；其制备、处理或保存/: info.txt
skills/ipc-search/references/IPC_Tree/B_作业；运输/: info.txt
skills/ipc-search/references/IPC_Tree/C_化学；冶金/: info.txt
skills/ipc-search/references/IPC_Tree/D_纺织；造纸/: info.txt
skills/ipc-search/references/IPC_Tree/E_固定建筑物/: info.txt
skills/ipc-search/references/IPC_Tree/F_机械工程；照明；加热；武器；爆破/: info.txt
skills/ipc-search/references/IPC_Tree/G_物理/: info.txt
skills/ipc-search/references/IPC_Tree/H_电学/: info.txt
skills/patent-examination-search/: SKILL.md
skills/patenthub/: SKILL.md
skills/patenthub/references/: api_reference.md
skills/patenthub/scripts/: patenthub_client.py
(+8131 files in other folders)
